--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2050,7 +2050,7 @@ input, select, textarea {
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
 			transition: opacity 0.2s ease-in-out;
-			background: url("images/overlay.png");
+			background: none;
 			border-radius: 0.35em;
 			content: '';
 			display: block;
@@ -2074,7 +2074,6 @@ input, select, textarea {
 				border-radius: 0.35em;
 				border: solid 3px rgba(255, 255, 255, 0.5);
 				color: #fff;
-				content: 'View';
 				display: inline-block;
 				font-size: 0.8em;
 				font-weight: 400;
@@ -2091,12 +2090,12 @@ input, select, textarea {
 			}
 
 			.image.thumb:hover:after {
-				opacity: 1.0;
+				opacity: 0;
 			}
 
 			.image.thumb:hover:before {
-				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 1.0;
+				background: none;
+				opacity: 0;
 			}
 
 		.image img {
@@ -2633,8 +2632,9 @@ input, select, textarea {
 		}
 
 		#header h1 {
-			color: rgba(255, 255, 255, 0.918);
-			font-size: 1.35em;
+			color: rgba(255, 255, 255, 0.623);
+			font-size: 1.25em;
+			font-style: italic;
 			line-height: 1.75em;
 			margin: 0;
 			text-align: center;
